implemented domain core classes and methods

--- a/MicroRabbit/MicroRabbit.Domain.Core/MicroRabbit.Domain.Core.csproj
+++ b/MicroRabbit/MicroRabbit.Domain.Core/MicroRabbit.Domain.Core.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Bus\" />
+    <Folder Include="Commands\" />
+    <Folder Include="Events\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.1.1" />
+  </ItemGroup>
+
 </Project>
